# internal/model/product.go
@@ -1,19 +1,18 @@
 package model
 
 import (
-	"database/sql"
 	"time"
 )
 
 type Product struct {
-	ID          int64          `json:"id"`
-	Name        string         `json:"name"`
-	Description string         `json:"description"`
-	Price       float64        `json:"price"`
-	Stock       int            `json:"stock"`
-	Category    string         `json:"category"`
-	ImageURL    sql.NullString `json:"image_url"`
-	Status      string         `json:"status"`
-	CreatedAt   time.Time      `json:"created_at"`
-	UpdatedAt   time.Time      `json:"updated_at"`
+	ID          int64     `json:"id"`
+	Name        string    `json:"name"`
+	Description string    `json:"description"`
+	Price       float64   `json:"price"`
+	Stock       int       `json:"stock"`
+	Category    string    `json:"category"`
+	ImageURL    *string   `json:"image_url"`
+	Status      string    `json:"status"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
 }
